refactor: 'Stream.collect(Collectors.toList())' -> 'Stream.toList()' 변경